# servepanel

./: Cargo.toml  README.md  servepage.html
src/: current_view_only.sql  daily_query.sql  daily_view.sql  daily_view_fast.sql  hourly_query.sql  main.rs  update_daily.sql
